--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -14,26 +14,50 @@
 <body style="background-color: rgb(93, 94, 95);">
     <div class='container'>
         <div>
+            {% if message %}
+            <div style="text-align: center; background-color: darkred; height: 40px; color: white;">
+                <h6 style="padding-top: 10px;">{{ message | safe }}</h6>
+            </div>
+            {% endif %}
             <form action="/submit" method="POST">
                 <div class="form-group">
                     <h3 style="text-align: center;">Check In</h3>
-                    <input id="icon_prefix" type="text" name="guestFirstName" placeholder="First">
-                    <input type="text" name="guestLastName" placeholder="Last">
-                    <input type="text" name="roomNumber" placeholder="Room">
+                    <input id="icon_prefix" type="text" name="guestFirstName" placeholder="First" style="color:rgb(218, 218, 218);">
+                    <input type="text" name="guestLastName" placeholder="Last" style="color:rgb(218, 218, 218);">
+                    <input type="text" name="roomNumber" placeholder="Room" style="color:rgb(218, 218, 218);">
                 </div>
                 <div style="text-align: center;">
                     <button type="submit" class="btn-large waves-effect waves-dark">Check In</button>
                 </div>
             </form>
         </div>
-    </div>
-
-    <div>
-        {% for guest in guests %}
-            <li>{{ guest.firstName }}</li>
-            <li>{{ guest.lastName}} </li>
-            <li>{{ guest.roomNumber }}</li>
-        {% endfor %}
+        <br>
+        <div style="text-align: center;">
+            <ul class="collection with-header">
+                <li class="collection-header"><h4>Checked In Guests:</h4></li>
+                {% for guest in guests %}
+                <li class="collection-item">
+                <form action="/delete/{{ guest.id }}" method="POST">
+                    <input type="hidden" name="{{ guest.id }}">
+                        <p style="font-size: 18px;">
+                        {{ guest.firstName }} 
+                        {{ guest.lastName }}
+                        </p>
+                        <p style="font-size: 16px;">
+                            Room: {{ guest.roomNumber}} 
+                        </p>
+                        
+                        
+                        <button style="margin-top: 15px" type="submit" class="btn-small red">Check Out</button>
+                </form>
+                </li>
+                
+                {% endfor %}
+                
+            </ul>
+            
+        </div>
+   
     </div>
 
    
